<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawerlayout"
    android:orientation="vertical"
    android:background="@drawable/bg_trangchu"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include layout="@layout/layout_actionbar"/>

        <TextView
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:background="@drawable/bg_datphonghoc"
            android:textColor="@color/white"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="20sp"
            android:text="@string/datphonghoc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_datphongmoi"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/button"
                android:text="@string/datMotPhongMoi"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btn_phongchoduyet"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:background="@drawable/button"
                android:text="@string/phongChoDuyet"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btn_lichsudatphong"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="7dp"
                android:background="@drawable/button"
                android:text="@string/lichSuDatPhong"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:id="@+id/hinh"
            android:background="@drawable/app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </LinearLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/navigationView"
        app:headerLayout="@layout/layout_header"
        android:layout_gravity="start"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:itemTextColor="@color/Darkgray"
        app:itemIconTint="@color/Darkgray"
        app:menu="@menu/drawermenu">
    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>
